--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -34,7 +34,17 @@
                     {% endfor %}</p>
                     </div>
                   </div>
+<br/>
+<form method="POST">
+    {% csrf_token  %}
+    {% if profile in user.profile.follows.all %}
+        <button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit"> Unfollow @{{profile.user.username}} </button>
 
+    {% else %}
+    <button class="btn btn-outline-success" name="follow" value="follow" type="submit"> Follow @{{profile.user.username}} </button>
+    {% endif %}
+</form>
+<br />
                 
             </div>
         </div>
