--- a/twitter/templates/home.html
+++ b/twitter/templates/home.html
@@ -2,6 +2,31 @@
 
 {% block content %}
 
-<h1>Meeps!</h1>
+<div class="container text-center">
+    <div class="row">
+        <div class="col-8">
 
+<h1>Tweets!</h1>
+<br/>
+{% for tweet in tweets %}
+    <div class="alert alert-dark" role="alert">
+        {{ tweet.body }}<br/>
+        <small class="text-muted">
+            ({{ tweet.created_at }}) By 
+            @{{ tweet.user.username }}
+        </small>
+    </div>
+<br/><br/>
+{% endfor %}
+</div>
+<div class="col-4">
+    <br/><br/><br/>
+    {% if form %}
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-secondary">Post Tweet</button>
+      </form>
+      {% endif %}
+</div>
 {% endblock %}
