--- a/twitter/templates/home.html
+++ b/twitter/templates/home.html
@@ -25,10 +25,20 @@
                   {{ tweet.body }}
                   <br/>
                   <small class="text-muted">
+                        ({{ tweet.created_at}}) By 
+                        @{{ tweet.user.username }}
+                        &nbsp;&nbsp;
+		  	            {{ tweet.number_of_likes }}  
 
-                      ({{ tweet.created_at}}) By 
-                      @{{ tweet.user.username }}
-
+                        {% if user in tweet.likes.all %}
+                            <a href="{% url 'tweet_like' tweet.id %}"><i class="fa-solid fa-heart" style='color:red'></i></a>
+                        {% else %}
+                            <a href="{% url 'tweet_like' tweet.id %}"><i class="fa fa-heart-o" style="color:red"></i></a>
+                        {% endif %}
+                        &nbsp;&nbsp;
+                        <a href="{% url 'tweet_show' tweet.id %}">
+                            <i class="fa-solid fa-share" style="color:gray"></i>
+                        </a>
                   </small>
                 </div><br/><br/>
             </div>
