--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -22,15 +22,24 @@
                             {% else %}
                             <img src="{% static 'images/default_profile_pic.png' %}" width=50 height=50 class="rounded-circle" alt="{{ profile.user.username }}">	
                             {% endif %}
-            
-            
                         </div>
-            
                         <div class="col-11">
                         {{ tweet.body }}<br/>
                         <small class="text-muted">
                             ({{ tweet.created_at }}) By 
                             @{{ tweet.user.username }}
+                            - {{ tweet.number_of_likes }} Likes -
+
+                            {% if user in tweet.likes.all %}
+                            <a href="{% url 'tweet_like' tweet.id %}"><i class="fa-solid fa-heart" style='color:red'></i></a>
+                            {% else %}
+                            <a href="{% url 'tweet_like' tweet.id %}"><i class="fa fa-heart-o" style="color:red"></i></a>
+                            {% endif %}
+
+                            &nbsp;&nbsp;
+                            <a href="{% url 'tweet_show' tweet.id %}">
+                                <i class="fa-solid fa-share" style="color:gray"></i>
+                            </a>
                         </small>
                         </div>
                     <br/><br/>
@@ -46,6 +55,34 @@
                 <img src="{{ profile.profile_image.url }}" style="width: 200px;"  class="rounded-circle">
 				    <br/><br/>
 				{% endif %}
+                {% if profile.homepage_link %}
+                <a href="{{ profile.homepage_link }}" target="new">
+                            <i class="fa-solid fa-link" style="color:gray"></i></a>
+                            {% endif %}
+                            &nbsp;&nbsp;
+                            {% if profile.facebook_link %}
+                <a href="{{ profile.facebook_link }}" target="new">
+                    <i class="fa-brands fa-facebook-f" style="color:gray"></i></a>
+                            {% endif %}
+                            &nbsp;&nbsp;
+                            {% if profile.instagram_link %}
+                <a href="{{ profile.instagram_link }}" target="new">
+                    <i class="fa-brands fa-instagram" style="color:gray"></i></a>
+                            {% endif %}
+                            &nbsp;&nbsp;
+                            {% if profile.linkedin_link %}
+                <a href="{{ profile.linkedin_link }}" target="new">
+                    <i class="fa-brands fa-linkedin-in" style="color:gray"></i></a>
+                            {% endif %}
+            <br/><br/>
+            
+                {% if profile.profile_bio %}
+                    <p align="justify">
+                        {{profile.profile_bio }}
+                    </p>
+                {% endif %}
+            
+            <br/>
                 <div class="card">
                     <div class="card-header">
                       Follows
