--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -89,10 +89,19 @@
                     </div>
                     <div class="card-body">
                       <p class="card-text">{% for following in profile.follows.all %}
-                        <a href="{% url 'profile' following.user.id %}"> @{{ following }}</a> <br/>
+                        <a href="{% url 'profile' following.user.id %}">@{{ following }}</a> &nbsp;
+                        <a href="{% url 'unfollow' following.user.id %}">
+                            <i class="fa fa-user-minus small" style="color:gray"></i>
+                        </a>
+                    <br/>
                 
-                    {% endfor %}</p>
+                    {% endfor %}
+                      </p>
                     </div>
+                    <br/>
+                    <div class="card-footer">
+                        <a href="{% url 'follows' profile.user.id %}" class="btn btn-sm btn-outline-secondary">See All...</a>
+                      </div>
                   </div>
                 
                 <br /><br/>
@@ -102,26 +111,41 @@
                       Followed By
                     </div>
                     <div class="card-body">
-                      <p class="card-text">{% for following in profile.followed_by.all %}
-                        <a href="{% url 'profile' following.user.id %}"> @{{ following }}</a> <br/>
-                    {% endfor %}</p>
+                      <p class="card-text"> 
+                        {% for following in profile.followed_by.all|slice:3 %}
+                        <a href="{% url 'profile' following.user.id %}">@{{ following }}</a> &nbsp;
+				        {% if following in profile.follows.all %}
+                            <a href="{% url 'unfollow' following.user.id %}">
+                                <i class="fa fa-user-minus small" style="color:gray"></i>
+                            </a>
+                        {% else %}
+                            <a href="{% url 'follow' following.user.id %}">
+                                <i class="fa fa-user-plus small" style="color:gray"></i>
+                            </a>
+                         {% endif %}
+				            <br/>
+                    {% endfor %}
+                            <br/>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{% url 'followers' profile.user.id %}" class="btn btn-sm btn-outline-secondary">See All...</a>
                     </div>
                   </div>
-<br/>
-<form method="POST">
-    {% csrf_token  %}
-    {% if profile in user.profile.follows.all %}
-        <button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit"> Unfollow @{{profile.user.username}} </button>
+            <br/>
+            <form method="POST">
+                {% csrf_token  %}
+                {% if profile in user.profile.follows.all %}
+                    <button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit"> Unfollow @{{profile.user.username}} </button>
+                {% else %}
+                <button class="btn btn-outline-success" name="follow" value="follow" type="submit"> Follow @{{profile.user.username}} </button>
+                {% endif %}
+            </form>
+            <br />
 
-    {% else %}
-    <button class="btn btn-outline-success" name="follow" value="follow" type="submit"> Follow @{{profile.user.username}} </button>
-    {% endif %}
-</form>
-<br />
-
-    {% if request.user.id == profile.user.id %}
-		<a href="{% url 'update_user' %}" class="btn btn-outline-secondary">Update Profile</a>
-	{% endif %}
+            {% if request.user.id == profile.user.id %}
+                <a href="{% url 'update_user' %}" class="btn btn-outline-secondary">Update Profile</a>
+            {% endif %}
                 
             </div>
         </div>
