--- a/twitter/templates/navbar.html
+++ b/twitter/templates/navbar.html
@@ -10,6 +10,16 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'profile_list' %}">Profile list</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Search
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'search' %}">Search tweets</a></li>
+              <li><a class="dropdown-item" href="{% url 'search_user' %}">Search users</a></li>
+              
+            </ul>
+          </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" 
@@ -25,6 +35,7 @@
             href="{% url 'login' %}">Login</a>
           </li>
           {% endif %}
+
         </ul>
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
