--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -37,9 +37,13 @@
                             {% endif %}
 
                             &nbsp;&nbsp;
-                            <a href="{% url 'tweet_show' tweet.id %}">
-                                <i class="fa-solid fa-share" style="color:gray"></i>
-                            </a>
+                            <a href="{% url 'tweet_show' tweet.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
+                            {% if request.user.username == profile.user.username %}
+                            &nbsp;&nbsp;
+                            <a href="{% url 'delete_tweet' tweet.id %}"><i class="fa fa-trash" style="color:gray"></i></a>
+                            &nbsp;&nbsp;
+                            <a href="{% url 'edit_tweet' tweet.id %}"><i class="fa fa-edit" style="color:gray"></i></a>
+                            {% endif %}
                         </small>
                         </div>
                     <br/><br/>
